--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "framework": "hugo",
-  "installCommand": "git submodule update --init --recursive"
+  "installCommand": "git submodule update --init --recursive --depth 1"
 }
