Refactor homeInfoParams to use equals signs

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,10 +4,10 @@ title = 'Rafael Reno'
 theme = 'PaperMod'
 
 [params]
-    # This tells PaperMod to show a nice "Profile Mode" on the homepage
-    homeInfoParams:
-        Title: "Rafael Reno"
-        Content: "Quant. Sailor. Artist. | Markets | Science | Sports | Logbook"
+    # Use equals signs (=) instead of colons (:)
+    [params.homeInfoParams]
+        Title = "Rafael Reno"
+        Content = "Quant. Sailor. Artist. | Markets | Science | Sports | Logbook"
 
 [menu]
   [[menu.main]]
